# KirkForge-Plugin3

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/plugin3-cli/: Cargo.toml
crates/plugin3-cli/src/: main.rs
crates/plugin3-cli/src/commands/: budget.rs  config.rs  init.rs  mod.rs  report.rs  store.rs
crates/plugin3-cli/src/hooks/: mod.rs
crates/plugin3-cli/tests/: adr_drift.rs  compaction_spec_drift.rs  end_to_end_smoke.rs  hooks_mod_drift.rs
crates/plugin3-core/: Cargo.toml
crates/plugin3-core/src/: atomic_write.rs  budget.rs  compaction.rs  cost.rs  detector.rs  error.rs  orchestrator.rs  paths.rs  report.rs  slicing.rs  store.rs  test_support.rs  text.rs
crates/plugin3-core/tests/: adr_xref_drift.rs  build_spec_drift.rs  compaction_fixtures.rs  cost_record_drift.rs  cost_reporting_spec_drift.rs  decide_fixtures.rs  detector_fixtures.rs  estimator_fixtures.rs  offload_store_spec_drift.rs  output_split_spec_drift.rs  readme_drift.rs  should_slice_fixtures.rs  slicing_orchestrator_spec_drift.rs  state_drift.rs  state_spec_drift.rs  store_drift.rs  token_budget_spec_drift.rs
crates/plugin3-hosts/: Cargo.toml
crates/plugin3-hosts/src/: claude_code.rs  lib.rs
crates/plugin3-hosts/tests/: output_shim_spec_drift.rs
docs/adr/: 0002-workspace.md  0013-output-shim.md  0014-state-management.md  0016-test-strategy.md
plugin/hooks/: plugin3_hook_common.sh
plugin/tools/: plugin3_common.sh
