[package]
name = "plugin3-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
